--- a/docs/examples/Rohde_Schwarz_SMW200A.ipynb
+++ b/docs/examples/Rohde_Schwarz_SMW200A.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# QCoDeS example with Rohe&Schwarz SMW200A"
+    "# QCoDeS example with Rohde&Schwarz SMW200A"
    ]
   },
   {
